add support for serving static files. Check route for creating month report
